--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "front-end",
   "version": "0.1.0",
-  "homepage": "https://josevitor-pinheiro.github.io/",
+  "homepage": "https://josevitor-pinheiro.github.io/SiteProprio/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
